--- a/src/routes/Home.module.css
+++ b/src/routes/Home.module.css
@@ -11,6 +11,7 @@
   justify-content: center;
   align-items: center;
   font-weight: 300;
+  color: #ececec;
 }
 
 .movies {
@@ -26,5 +27,6 @@
   .movies {
     grid-template-columns: 1fr;
     width: 100%;
+    height: 100vh;
   }
 }
